# roboti-irl

./: ISSUES.md  LICENSE  README.md  erg_control_out  erg_trajectory_out  setup.sh
src/cartpole/: CMakeLists.txt  README.md  TODO.md  package.xml
src/cartpole/config/: cart_pole_controller.yaml  cartpole_controller.yaml  cartpole_params.yaml  ergodic_properties.json  joint_state_controller.yaml  simulation.rviz
src/cartpole/demonstrations/: cart_x.txt  cartpole.csv  demo0.csv  demo1.csv  demo2.csv  demo3.csv  demo4.csv  demo5.csv  pole_x.txt  test0.csv  test1.csv  test10.csv  test11.csv  test12.csv  test13.csv  test2.csv  test3.csv  test4.csv  test5.csv  test6.csv  test7.csv  test8.csv  test9.csv
src/cartpole/include/cartpole/: cartpole_sys.hpp
src/cartpole/launch/: cartpole_control.launch.xml  cartpole_controller.launch.xml  cartpole_gazebo.launch.py  cartpole_gazebo.launch.xml  cartpole_rviz.launch.py  cartpole_sim.launch.xml  cartpole_sim_rsp.launch.xml  controller_utils.launch.xml  load_cartpole.launch.py
src/cartpole/scripts/: cartpole_dynamics.py  cartpole_file_util.py
src/cartpole/src/: cartpole_control.cpp  cartpole_ctrl.cpp  cartpole_file_util.py  cartpole_key.cpp  controller_script.cpp  ergodic_script.cpp
src/cartpole/tests/: test_cartpole.cpp  test_ergodic.cpp  test_ilqr_controller.cpp
src/cartpole/urdf/xacro/: cartpole_gazebo_urdf.urdf.xacro  cartpole_gazebo_urdf.xacro.urdf  cartpole_urdf.urdf.xacro
src/ergodiclib/: CMakeLists.txt  README.md  TODO.md  package.xml
src/ergodiclib/include/ergodiclib/: base_controller.hpp  cartpole.hpp  controller.hpp  erg_controller.hpp  ergodic_controller.hpp  ergodic_measure.hpp  ergodic_utils.hpp  file_utils.hpp  fourier_basis.hpp  model.hpp  num_utils.hpp  simple_controller.hpp
src/ergodiclib/scripts/: visualize_ergodic.py
src/ergodiclib/src/: controller.cpp  controller_test.cpp  ergodic_controller.cpp  ergodic_main.cpp  ergodic_measure.cpp  ergodic_test.cpp  ergodic_utils.cpp  file_utils.cpp  fourier_basis.cpp  num_utils.cpp  visualize_ergodic.py
src/ergodiclib/tests/: test_cartpole.cpp  test_ergodic.cpp  test_ilqr_controller.cpp  tests.cpp
test_components/: cartpole.hpp  controller.cpp  controller.hpp  controller_test.cpp  ergodic_controller.cpp  ergodic_controller.hpp  ergodic_main.cpp  ergodic_measure.cpp  ergodic_measure.hpp  ergodic_test.cpp  file_utils.cpp  file_utils.hpp  fourier_basis.cpp  fourier_basis.hpp  model.hpp  num_utils.cpp  visualize_ergodic.py
